--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
-    background-color: coral;
-    height: 15vh;
+    background-color: chocolate;
+    height: 20vh;
 
 }
 .navigation ul {
@@ -17,7 +17,7 @@
     margin-right: 20px;
     margin: 0 5px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .navigation ul li {
@@ -29,16 +29,17 @@
 .navigation ul li a {
     list-style: none;
     text-decoration: none;
-    color: black;
+    color: wheat;
     font-size: 15px;
     padding: 7px 13px;
     border-radius: 3px;
     font-family: Arial, Helvetica, sans-serif;
 }
 a.home, a:hover {
-    background-color: coral;
+    background-color: black;
     transition: .5s;
 }
+
 .name {
     background-image: url(dav2.jpg);
     height: 100vh;
@@ -49,4 +50,21 @@ a.home, a:hover {
     font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
     font-size: 15px;
+    background-color: darksalmon;
+    height:100vh;
+      
+}
+#home {
+    background-image: url("image.jpg");
+}
+.info p{
+    font-weight: bold;
+    display: flex;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    background-image: url("proud.jpg");
+    height: 100vh;
+    font-style: oblique;
+    color: black;
 }
