Added a heading on the index.html file

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     height: 20vh;
 
 }
+.akan {
+    text-decoration-color: aqua;
+   
+}
 .navigation ul {
     list-style: none;
     text-decoration: none;
